@@ -2,35 +2,35 @@
 
 D       MS      7     ./set1_00-03-08.dat      set1      ./root-join-read/build70/build70-c7-dataset1.root
 
-B	MS	7	internal	Na22	Na22	GRND	0.97	1e-4	0.69	1.31	./root-join-read/build70/build70-internalNa22_GRND.root	
-F	MS	7	internal	I125	I125	GRND	0.28	1e-4	0.69	1.31	./root-join-read/build70/build70-internalI125_GRND.root	
+F	MS	7	internal	Na22	Na22	GRND	0.97	1e-4	0.01	10.	./root-join-read/build70/build70-internalNa22_GRND.root	
+F	MS	7	internal	I125	I125	GRND	0.28	1e-4	0.01	10.	./root-join-read/build70/build70-internalI125_GRND.root	
 
 B	MS	7	internal	Te121m	Te121	GRND	0.11	1e-4	0.69	1.31	./root-join-read/build70/build70-internalTe121m_GRND.root	
 B	MS	7	internal	Te123m	Te123	GRND	0.11	1e-4	0.69	1.31	./root-join-read/build70/build70-internalTe123m_GRND.root	
 B	MS	7	internal	Te125m	Te125	GRND	0.11	1e-4	0.69	1.31	./root-join-read/build70/build70-internalTe125m_GRND.root	
 B	MS	7	internal	Te127m	Te127	GRND	0.11	1e-4	0.69	1.31	./root-join-read/build70/build70-internalTe127m_GRND.root	
 
-F       MS      7       internal    K40       K40       GRND      0.564     1e-4     0.69     1.31       ./root-join-read/build70/build70-internalK40_GRND.root
-F       MS      7       internal    Th232     Th232     GRND    2.50e-3   1e-4     0.69     1.31       ./root-join-read/build70/build70-internalTh232_GRND.root
+B       MS      7       internal    K40       K40       GRND      0.564     1e-4     0.69     1.31       ./root-join-read/build70/build70-internalK40_GRND.root
+B       MS      7       internal    Th232     Th232     GRND    2.50e-3   1e-4     0.69     1.31       ./root-join-read/build70/build70-internalTh232_GRND.root
 #B       MS      7       internal    U238      U238      GRND    2.23e-4   1e-4     0.69     1.31       ./root-join-read/build70/build70-internalU238_GRND.root
-F       MS      7       internal    U238      U238      Pb210    2.23e-4   1e-4     0.69     1.31       ./root-join-read/build70/build70-internalU238_Pb210.root
+B       MS      7       internal    U238      U238      Pb210    2.23e-4   1e-4     0.69     1.31       ./root-join-read/build70/build70-internalU238_Pb210.root
 
-F	MS	7       internal	Pb210	Pb210	GRND	0.1	1e-4	0.001	1000.	./root-join-read/build70/build70-internalPb210_GRND.root	
-F	MS	7	  teflon	Pb210	Pb210	GRND	0.1	1e-4	0.001	1000.	./root-join-read/build70/build70-teflonPb210_GRND.root	
-F	MS	7        cu-case	Pb210	Pb210	GRND	0.1	1e-4	0.001	1000.	./root-join-read/build70/build70-cucasePb210_GRND.root	
-F	MS	7   internal-surf-10um	Pb210	Pb210   GRND	0.1	1e-4	0.001	1000.	./root-join-read/build70/build70-internalsurf10umPb210_GRND.root	
-F	MS	7   teflon-surf-10um	Pb210	Pb210   GRND	0.1	1e-4	0.001	1000.	./root-join-read/build70/build70-teflonsurf10umPb210_GRND.root	
-F	MS	7   cu-surf-10um	Pb210	Pb210   GRND	0.1	1e-4	0.001	1000.	./root-join-read/build70/build70-cusurf10umPb210_GRND.root	
+F	MS	7       internal	Pb210	Pb210	GRND	1.0	1e-4	0.001	1000.	./root-join-read/build70/build70-internalPb210_GRND.root	
+F	MS	7	  teflon	Pb210	Pb210	GRND	1.0	1e-4	0.001	1000.	./root-join-read/build70/build70-teflonPb210_GRND.root	
+F	MS	7        cu-case	Pb210	Pb210	GRND	1.0	1e-4	0.001	1000.	./root-join-read/build70/build70-cucasePb210_GRND.root	
+F	MS	7   internal-surf-10um	Pb210	Pb210   GRND	1.0	1e-4	0.001	1000.	./root-join-read/build70/build70-internalsurf10umPb210_GRND.root	
+F	MS	7   teflon-surf-10um	Pb210	Pb210   GRND	1.0	1e-4	0.001	1000.	./root-join-read/build70/build70-teflonsurf10umPb210_GRND.root	
+F	MS	7   cu-surf-10um	Pb210	Pb210   GRND	1.0	1e-4	0.001	1000.	./root-join-read/build70/build70-cusurf10umPb210_GRND.root	
 
 F        MS        7       pmt         K40       K40       GRND      58.0      1e-4     0.11     5.11       ./root-join-read/build70/build70-pmtK40_GRND.root
 B        MS        7       extpmt      K40       K40       GRND      58.0      1e-4     0.11     5.11       ./root-join-read/build70/build70-extpmtK40_GRND.root
-F        MS        7       pmt         U238      U238      Pb210    25.0      1e-4     0.11     5.11       ./root-join-read/build70/build70-pmtU238_Pb210.root
+F        MS        7       pmt         U238      U238      Pb210    25.0      1e-4     0.11     20.11       ./root-join-read/build70/build70-pmtU238_Pb210.root
 B        MS        7       extpmt      U238      U238      Pb210    25.0      1e-4     0.11     5.11       ./root-join-read/build70/build70-extpmtU238_Pb210.root
-F        MS        7       pmt         U238      Pb210     GRND    1.76      1e-4     0.001     5.11       ./root-join-read/build70/build70-pmtPb210_GRND.root
+F        MS        7       pmt         U238      Pb210     GRND    1.76      1e-4    0.001     1000.       ./root-join-read/build70/build70-pmtPb210_GRND.root
 B        MS        7       extpmt      U238      Pb210     GRND    1.76      1e-4     0.11     5.11       ./root-join-read/build70/build70-extpmtPb210_GRND.root
 #B        MS        7       pmt         U238      U238      GRND    25.0      1e-4     0.11     5.11       ./root-join-read/build70/build70-pmtU238_GRND.root
 #B        MS        7       extpmt      U238      U238      GRND    25.0      1e-4     0.11     5.11       ./root-join-read/build70/build70-extpmtU238_GRND.root
-F        MS        7       pmt         Th232     Th232     GRND    12.0      1e-4     0.11     5.11       ./root-join-read/build70/build70-pmtTh232_GRND.root
+F        MS        7       pmt         Th232     Th232     GRND    12.0      1e-4     0.11     20.11       ./root-join-read/build70/build70-pmtTh232_GRND.root
 B        MS        7       extpmt      Th232     Th232     GRND    12.0      1e-4     0.11     5.11       ./root-join-read/build70/build70-extpmtTh232_GRND.root
 
 B        MS        7       lsveto      U238      U238      GRND     8.64e-2   1e-4     0.69     1.31       ./root-join-read/build70/build70-lsvetoU238_GRND.root
